--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -14,8 +14,9 @@ html
     meta content=@config['description'] name="description"
     meta content="Nyoho" name="Author"
     meta property="og:image" content=@ogimage_url
-    = javascript_include_tag 'script'
-    = stylesheet_link_tag :main
+    / = javascript_include_tag 'script'
+    / = stylesheet_link_tag :main
+    link href="stylesheets/main.css" rel="stylesheet" type="text/css" /
   body
     header data-block-type="headers" data-id="4" 
       .container
