add share button (and more (sorry))

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -82,7 +82,8 @@ html
             p Founder at the Hiroshima dialect dubbing series
           .col-md-8.col-lg-4.col-xl-3.pt-5.pt-lg-0.m-auto.text-center
             img alt="image" height="50" src="images/white.png" /
-            p.text-h3.mt-3 "A small river named Duden flows by their place and supplies it with the necessary regelialia."
+            p.text-h3.mt-3 賛同してくれてんなら広めてえや。このシェアボタンでの。
+            a.twitter-share-button href="https://twitter.com/intent/tweet?text=#{@tweet_text}" data-size="large" Twitterで拡散
             p.text-h3.mt-4.mt-xl-5
               strong わし
             p Founder at the Hiroshima dialect dubbing series
