--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -94,7 +94,11 @@ html
         .row.text-center.justify-content-center
           .col-md-10.col-lg-8.col-xl-7
             h1#venues どこに行こうかしらん
-            p.text-h3 いい観光情報・飲食店・宿・お土産・感想リンクをどんどん集めます。提案はこちら
+            p.text-h3
+              | いい観光情報・飲食店・宿・お土産・感想リンクをどんどん集めます。
+              | 提案は
+              a href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのform
+              | からどうぞ。
         .row.mt-5.align-items-center.justify-content-center
 
           .col-md-8.col-lg-4
