--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -51,9 +51,11 @@ html
           .col-12
             .row.justify-content-center.pb-5
               .col-12.col-lg-8.text-center
-                h1 #go2mukaishima 向島に行こうや〜
-            img.img-fluid alt="image" src="images/go2mukaishima.jpg"
-
+                h1.top-text #go2mukaishima 向島に行こうや〜
+            a href="images/go2mukaishima.png"
+              img.img-fluid alt="向島(とその周辺)に行こうや〜! #go2mukaishima (拡散用高画質バナーはリンク)" src="images/go2mukaishima.jpg"
+            .mt-4.text-center.text-white
+              p ↑拡散用banner素材じゃ。保存して使うてえや。リンク先に高画質PNG画像も置いとるで。
 
     section.fdb-block data-block-type="testimonials" data-id="6"
       .container
