--- a/app/stylesheets/froala.sass
+++ b/app/stylesheets/froala.sass
@@ -111,7 +111,12 @@
     font-size: 2.75rem
     margin-bottom: .5em
     margin-top: .3em
-    font-weight: 400
+    font-weight: 800
+  .top-text
+    -webkit-text-fill-color: #444
+    -webkit-text-stroke: 4px #ffffff
+    paint-order: stroke fill
+    stroke-linecap: round
   .text-h2, h2
     font-size: 2rem
     margin-bottom: .5em
