--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -111,7 +111,12 @@
     font-size: 2.75rem;
     margin-bottom: 0.5em;
     margin-top: 0.3em;
-    font-weight: 400; }
+    font-weight: 800; }
+  .fdb-block .top-text {
+    -webkit-text-fill-color: #444;
+    -webkit-text-stroke: 4px #ffffff;
+    paint-order: stroke fill;
+    stroke-linecap: round; }
   .fdb-block .text-h2, .fdb-block h2 {
     font-size: 2rem;
     margin-bottom: 0.5em;
