change expression of form

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -100,7 +100,7 @@ html
             p.text-h3
               | いい観光情報・飲食店・宿・お土産・感想リンクをどんどん集めます。
               | 提案は
-              a href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのform
+              a href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのフォームform
               | からどうぞ。
         #app.row.mt-5.align-items-center.justify-content-center
             
