--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -104,89 +104,9 @@ html
               | からどうぞ。
         #app.row.mt-5.align-items-center.justify-content-center
             
-          .col-md-8.col-lg-4
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong Twitterより
-                    / br/
-                    / em Co-founder at Company
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    | <blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">向島の温泉宿に泊まったことがある。　逃亡犯が泳いで渡ったらしい海峡、客室から、対岸への渡し船乗り場が見えて風情があった。<br>翌朝5時台くらいから渡し船が稼働しており、寝坊が出来なかったのも、良い思い出・・・<a href="https://t.co/xCnZFp61BC">https://t.co/xCnZFp61BC</a></p>&mdash; 蒼々舎→下諏訪最小工務店 (@SososhaSuwa) <a href="https://twitter.com/SososhaSuwa/status/991267779675213825?ref_src=twsrc%5Etfw">2018年5月1日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
           venue-item v-for="item in venues" v-bind:item="item"
 
-          .col-md-8.col-lg-4.mt-4.mt-lg-0
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong 岩子（いわし）島　厳島神社
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    a href="https://www.ononavi.jp/sightseeing/temple/detail.html?detail_id=338" 岩子（いわし）島　厳島神社
-
-          .col-md-8.col-lg-4.mt-4.mt-lg-0
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong Twitterより
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    | <blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">尾道市向島の新名物、明日(5月1日）から販売開始。<br><br>脱獄饅頭<br><br>脱獄アイス<br><br>脱獄ラーメン<br><br>平尾容疑者の影響で観光客じり貧だったGW前半の売り上げ減をGW後半で一気に挽回するつもりらしい。<a href="https://twitter.com/hashtag/%E5%B9%B3%E5%B0%BE%E5%AE%B9%E7%96%91%E8%80%85?src=hash&amp;ref_src=twsrc%5Etfw">#平尾容疑者</a></p>&mdash; グッちゃん (@goodmax123) <a href="https://twitter.com/goodmax123/status/990890355842166784?ref_src=twsrc%5Etfw">2018年4月30日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-
-          .col-md-8.col-lg-4.mt-4.mt-lg-0
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong Twitterより
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    | <blockquote class="twitter-tweet" data-cards="hidden" data-lang="ja"><p lang="ja" dir="ltr">おはようございます。<br>連休の前半が終わりました。<br><br>そんな今朝の向島店の店長の顔です（笑）あの全国区になった尾道市向島です。<br><br>やっと日常が戻ったと、ホッとしながらも5月から心機一転頑張るそうです♪<br><br>お近くにお越しの方は是非、向島店へ！4月の売上が厳しかったので挽回させてやって下さい！ <a href="https://t.co/oqFRMw2uJa">pic.twitter.com/oqFRMw2uJa</a></p>&mdash; フレスタ公式アカウント (@FRESTA_81) <a href="https://twitter.com/FRESTA_81/status/991116240759308288?ref_src=twsrc%5Etfw">2018年5月1日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-
-
-          .col-md-8.col-lg-4.mt-4.mt-lg-0
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong Twitterより
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    | <blockquote class="twitter-tweet" data-conversation="none" data-lang="ja"><p lang="ja" dir="ltr">それと脱走騒ぎでGWの客足に影響が出て売り上げが下がった<br>尾道と向島の店舗の損失と比べてほしいです</p>&mdash; bosskan (@bosskan) <a href="https://twitter.com/bosskan/status/991271817867419648?ref_src=twsrc%5Etfw">2018年5月1日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-
-
-          .col-md-8.col-lg-4.mt-4.mt-lg-0
-            .fdb-box
-              .row.no-gutters.align-items-center
-                .col-3
-                  img.img-fluid alt="image" src="images/white.png" /
-                .col-8.ml-auto
-                  p
-                    strong Twitterより
-              .row.mt-4
-                .col-12
-                  p.text-h3
-                    | <blockquote class="twitter-tweet" data-conversation="none" data-lang="ja"><p lang="ja" dir="ltr">戦艦大和のロケセットありましたね。<br>向島は橋だけで本土に繋がっているので、他に抜け道がなく渋滞、島内のお店の売り上げも従来の半分くらいに落ち込んでいたそうです。<br>これで、落ち着くでしょうね。</p>&mdash; aquarium (@aquarium879) <a href="https://twitter.com/aquarium879/status/990855825546596357?ref_src=twsrc%5Etfw">2018年4月30日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
     footer.fdb-block.footer-large.bg-dark.fp-active data-block-type="footers" data-id="3" 
       .container
@@ -219,6 +139,7 @@ html
     script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" 
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" 
     script src="https://cdn.jsdelivr.net/npm/vue"
+    script src="https://platform.twitter.com/widgets.js" charset="utf-8"
     javascript:
       if(!window.location.hostname.match(/^127.0.0.1$/)){
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
