--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -6,7 +6,7 @@ html
     meta content="width=device-width, initial-scale=1" name="viewport" /
     link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" /
     link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet" /
-    link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" /
+    link href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" rel="stylesheet" /
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     title= @title
