add url to info

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -24,3 +24,10 @@ li
 
 .icon i
   font-size: 60px
+
+.item-url
+  font-size: 10px
+  word-wrap: break-word
+  line-height: 1.3
+  a
+    color: #888
