--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -290,4 +290,11 @@ li {
 .icon i {
   font-size: 60px; }
 
+.item-url {
+  font-size: 10px;
+  word-wrap: break-word;
+  line-height: 1.3; }
+  .item-url a {
+    color: #888; }
+
 /*# sourceMappingURL=main.css.map */
