--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -31,3 +31,12 @@ li
   line-height: 1.3
   a
     color: #888
+
+.bg-dark-translucent
+  background-color: rgba(0, 0, 0, 0.4)
+
+p.text-h3 a
+  color: #00abff
+  font-size: larger
+
+
