--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -56,7 +56,7 @@ html
             a href="images/go2mukaishima.png"
               img.img-fluid alt="向島(とその周辺)に行こうや〜! #go2mukaishima (拡散用高画質バナーはリンク)" src="images/go2mukaishima.jpg"
             .mt-4.text-center.text-white
-              p ↑拡散用banner素材じゃ。保存して使うてえや。リンク先に高画質PNG画像も置いとるで。
+              p.bg-dark-translucent ↑拡散用banner素材じゃ。保存して使うてえや。リンク先に高画質PNG画像も置いとるで。
 
     section.fdb-block data-block-type="testimonials" data-id="6"
       .container
@@ -100,7 +100,7 @@ html
             p.text-h3
               | いい観光情報・飲食店・宿・お土産・感想リンクをどんどん集めます。
               | 提案は
-              a href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのフォーム
+              a.font-weight-bold href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのフォーム
               | からどうぞ。
         #app.row.mt-5.align-items-center.justify-content-center
             
