--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -23,7 +23,8 @@ li
   max-width: 1000px
 
 .icon i
-  font-size: 60px
+  font-size: 68px
+  color: #a0a0a0
 
 .item-url
   font-size: 10px
@@ -35,7 +36,7 @@ li
 .bg-dark-translucent
   background-color: rgba(0, 0, 0, 0.4)
 
-p.text-h3 a
+p.venues a
   color: #00abff
   font-size: larger
 
