--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -97,7 +97,7 @@ html
         .row.text-center.justify-content-center
           .col-md-10.col-lg-8.col-xl-7
             h1#venues どこに行こうかしらん
-            p.text-h3
+            p.text-h3.venues
               | いい観光情報・飲食店・宿・お土産・感想リンクをどんどん集めます。
               | 提案は
               a.font-weight-bold href="https://docs.google.com/forms/d/e/1FAIpQLSfxRQDuQYpgpsdIy0IJTPnDtBdaVVZjWFO53brZx0G6DYWfZg/viewform?usp=sf_link" こちらのフォーム
