--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -288,7 +288,8 @@ li {
   max-width: 1000px; }
 
 .icon i {
-  font-size: 60px; }
+  font-size: 68px;
+  color: #a0a0a0; }
 
 .item-url {
   font-size: 10px;
@@ -300,7 +301,7 @@ li {
 .bg-dark-translucent {
   background-color: rgba(0, 0, 0, 0.4); }
 
-p.text-h3 a {
+p.venues a {
   color: #00abff;
   font-size: larger; }
 
